--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -28,3 +28,41 @@
     margin: 0px 10px 0px 10px;
     cursor: pointer;
 }
+
+.navdropbtn {
+    background-color: transparent;
+    color: black;
+    padding: 5px;
+    font-size: 16px;
+    /* height: 30px; */
+    border: none;
+}
+
+.navdropdown {
+    z-index: 999;
+    margin: 0px 10px 0px 10px;
+    position: relative;
+    display: inline-block;
+}
+
+.navdropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.navdropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+  
+.navdropdown-content a:hover {background-color: #ddd;}
+  
+.navdropdown:hover .navdropdown-content {display: block;}
+  
+.navdropdown:hover .navdropbtn {background-color: #58b9e6;}
